--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -262,10 +262,10 @@
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7fbf1f94b6a0>"
+       "<folium.map.Marker at 0x7f5c38b063c8>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
