Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -457,16 +457,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7fbf4ce6fbe0>"
+       "<folium.map.Marker at 0x7f5c38abd0b8>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
